<resources>
    <string name="app_name">ChatApplication</string>
    <string name="enter_otp_number">Enter OTP number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="from">From</string>
    <string name="sj_project">Devil Project</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="online">Online_tv</string>
    <string name="welcome">Welcome</string>
    <string name="_9_12_am">9:12 am</string>
    <string name="phone_number">Phone Number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="send_otp">Send OTP</string>
    <string name="user_name">User Name</string>
    <string name="save">Save</string>
    <string name="photo">Photo</string>
    <string name="search">Search</string>
    <string name="delete_for_everyone">Delete for Everyone</string>
    <string name="cancel">Cancel</string>
    <string name="delete_for_me">Delete for Me</string>
    <string name="tap_to_chat">Tap to Chat</string>

</resources>