<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginUser">

    <RelativeLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_launcher_foreground" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/countrycodepicker"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/line"
        android:layout_centerInParent="true"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        app:ccp_areaCodeDetectedCountry="true"
        app:ccp_autoDetectCountry="true" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_numberlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/countrycodepicker"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="70dp"
        app:helperText="Required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/getphonenumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:cursorVisible="true"
            android:inputType="number"
            android:hint="@string/phone_number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otpnumberlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/countrycodepicker"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="70dp"
        android:visibility="gone"
        app:helperText="Required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/getotpnumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:cursorVisible="true"
            android:visibility="gone"
            android:inputType="number"
            android:hint="@string/otp_verification"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendotpButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/countrycodepicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:text="@string/send_otp"
        android:textColor="@color/purple_700"
        android:textSize="15sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verifyotpButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/sendotpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
       android:visibility="gone"
        android:textColor="@color/purple_700"
        android:text="@string/verify_otp"
        android:textSize="15sp" />


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_marginTop="30dp"/>

</RelativeLayout>